--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     };
 
     var getWizardY = function (height) {
-      return (1 * height / 3) - getWizardHeight();
+      return (height / 3);
     };
   </script>
   <script src="js/game.js"></script>
