--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
     };
   </script>
 
+  <script src="js/debounce.js"></script>
   <script src="js/util.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/data.js"></script>
@@ -213,6 +214,7 @@
   <script src="js/dialog.js"></script>
   <script src="js/render.js"></script>
   <script src="js/colors.js"></script>
+  <script src="js/similar.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
 
