--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
   <script src="js/backend.js"></script>
   <script src="js/data.js"></script>
   <script src="js/setup.js"></script>
+  <script src="js/avatar.js"></script>
   <script src="js/dialog.js"></script>
   <script src="js/render.js"></script>
   <script src="js/colors.js"></script>
