--- a/index.html
+++ b/index.html
@@ -210,12 +210,14 @@
   <script src="js/util.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/svg-to-base64.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/avatar.js"></script>
   <script src="js/dialog.js"></script>
   <script src="js/render.js"></script>
   <script src="js/colors.js"></script>
   <script src="js/similar.js"></script>
+  <script src="js/shop.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
 
